[package]
name = "blusher"
version = "2.0.0"
edition = "2018"
authors = ["Yujŏnja <hardboiled65@gmail.com>"]
description = "A Linux GUI Toolkit."
license = "MIT"
readme = "README.md"
keywords = ["wayland", "linux", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bl"

[dependencies]
